add devise, form to create new books and new fonts, logo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,12 @@
  *= require_tree .
  *= require_self
  */
- @import "bulma";
+@import "bulma";
+
+@font-face {
+  font-family: 'TacOne Regular';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("TacOne-Regular.ttf") format('truetype');
+}
