--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1 class="title is-6">Hello, Rails!</h1>
 <p class="subtitle">Find me in app/views/welcome/index.html.erb</p>
+<h1>Falta arrumar o botão de sair qnd estiver logado, bloquear criação de livros para quem não é admin</h1>
