fix routes and configure logout button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,6 @@
-<h1 class="title is-6">Hello, Rails!</h1>
-<p class="subtitle">Find me in app/views/welcome/index.html.erb</p>
-<h1>Falta arrumar o botão de sair qnd estiver logado, bloquear criação de livros para quem não é admin</h1>
+<ul>
+
+    <li>Falta adicionar role de admin no User e bloquear adição de livro se o user não for admin</li>
+    <li>Adicionar perfil e informações do perfil no User</li>
+    <li>Adicionar tabela de estante, cada user tem uma estante, onde vai ficar registrado qnd os livros vão ser emprestados</li>
+</ul>
