--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,30 @@
-<h1>Books</h1>
+<h1 class="title is-1">Todos os livros</h1>
 
-<ul>
+<div class="columns is-multiline">
   <% @books.each do |book| %>
-    <li>
-      <%= book.title %>
-    </li>
+    <div class="column is-one-third">
+      <div class="card p-5">
+        <article class="media">
+          <div class="media-left">
+            <figure class="image is-96x96">              
+              <img src="<%= rails_blob_path(book.cover, only_path: true) %>" class="books-index__card-imag">
+            </figure>
+          </div>
+
+          <div class="media-content">
+            <div class="content">
+              <p class="title is-5"><%= book.title %></p>
+              <p class="subtitle is-6"><%= book.author %></p>
+              <p class="is-7"><%= book.category %></p>
+            </div>
+          </div>
+        </article>
+        <div class="card-footer">
+          <a href="<%= book_path(book) %>" class="card-footer-item">Ver livro</a>
+        </div>
+      </div>
+    </div>
   <% end %>
-</ul>
+</div>
+
 
