--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,18 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <%= favicon_link_tag asset_path('alexandria.svg') %>
+    <%= favicon_link_tag asset_path('alexandria.ico') %>
   </head>
 
   <body>
     <%= render "layouts/navbar" %>
+
+    <% if notice || alert  %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    <% end %>
+
     <main class="container is-widescreen p-3">
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
       <%= yield %>
     </main>
   </body>
