--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
         Assinatura
       </a>
       
-      <% if user_signed_in? %>
+      <% if user_signed_in? && current_user.admin? %>
         <a class="navbar-item" href="/books/new">
           Adicionar livro
         </a>
